# wiki-memory

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: contract.md
scripts/: add_hook_happened_on.postgres.sql  add_hook_happened_on.sqlite.sql  add_usage_columns.postgres.sql  add_usage_columns.sqlite.sql
tests/: conftest.py  golden_cases.json  test_dedup_and_pending.py  test_delete_by_source.py  test_embedding_recall.py  test_golden_real_llm.py  test_hook_recall.py  test_keyword_channel.py  test_memory_loop.py  test_prompt_disciplines.py  test_scoring_upgrade.py  test_usage_tracking.py
wiki_memory/: config.py  db.py  deletion.py  embedding.py  linking.py  locks.py  main.py
wiki_memory/api/: deps.py  router.py  schemas.py
wiki_memory/api/routes/: __init__.py  consolidation.py  pages.py  recall.py  sources.py  spaces.py  ui.py
wiki_memory/consolidation/: engine.py  prompts.py
wiki_memory/llm/: __init__.py  base.py  openai_compat.py
wiki_memory/models/: __init__.py  base.py  consolidation_run.py  evidence.py  keyword.py  page.py  page_embedding.py  page_link.py  page_revision.py  source.py  space.py
wiki_memory/recall/: __init__.py  base.py  bm25.py  embedding.py  fuzzy.py  keywords.py  llm.py  render.py  tokenize.py
wiki_memory/repositories/: __init__.py  embedding_repo.py  evidence_repo.py  keyword_repo.py  link_repo.py  page_repo.py  revision_repo.py  run_repo.py  source_repo.py  space_repo.py
wiki_memory/web/: index.html
