[project]
name = "wiki-memory"
version = "0.1.0"
description = "Wiki-style long-term memory service: immutable sources are consolidated by an LLM into a typed, interlinked, revisioned wiki."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "sqlmodel>=0.0.22",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "pydantic-settings>=2.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["wiki_memory*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
